Bug 149329 - After right-click cursor doesn't change back to the typing cursor
Summary: After right-click cursor doesn't change back to the typing cursor
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.3.3.2 release
Hardware: All All
: medium trivial
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.5
Keywords:
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2022-05-27 07:20 UTC by Isaac Cohen
Modified: 2022-05-28 18:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Isaac Cohen 2022-05-27 07:20:44 UTC
Hi,

I noticed after a recent upgrade that when typing in any LibreOffice application, if you right-click and then exit the right-click menu, either by selecting something or by simply clicking out, the mouse cursor doesn't change back to the typing cursor. Rather it remains the pointing cursor.

Steps to reproduce:

1. Open LO Writer
2. Start typing something - you should have the typing cursor
3. Right-click anywhere in your doc - now you have the pointing cursor
4. Click again to exit the right-click menu

Result:
The cursor remains the pointing cursor

Expected result:
The cursor changes back to the typing cursor


I'm using:

Operating System: Kubuntu 22.04
KDE Plasma Version: 5.24.4
Kernel Version: 5.17.5-051705-generic (64-bit)
LibreOffice Version: 7.3.3.2
Comment 1 Rafael Lima 2022-05-27 18:33:52 UTC
I can confirm this with LO 7.3.3 in kf5.

The mouse pointer only goes back to being a typing cursor if you move it outside the document view and then back.

Not repro with gtk3 and gen. So this seems to be kf5-specific.

Version: 7.3.3.2 / LibreOffice Community
Build ID: 30(Build:2)
CPU threads: 12; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.3~rc2-0ubuntu0.21.10.1~lo1
Calc: threaded
Comment 2 Commit Notification 2022-05-28 16:42:09 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/caf862fc843c89cceae2121f743a3822e09bbd46

tdf#149329 Qt change cursor via QWidget

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2022-05-28 18:33:41 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/8e92328c3f7d93810f0b40bafb62b981d8e98f9f

tdf#149329 Qt change cursor via QWidget

It will be available in 7.3.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.