tdf#149329 Qt change cursor via QWidget

... instead of its QWindow

No idea, why my initial implementation used the QWindow. Neither
do I know, why it's now somehow broken. The code is called, but
the cursor doesn't change. But it seems to work via QWidget, so
just do that. IMHO less QWindow is preferable generally; let Qt
handle more of the low-level stuff.

Change-Id: Id23fba719c9a4d7e760991c51e6021c6f89be345